--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.moodly.app" >
+    package="com.leanovate.moodly.app" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo.Light" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.leanovate.moodly.app.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,20 +29,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DisplayVoteStatsActivity"
+            android:name="com.leanovate.moodly.app.DisplayVoteStatsActivity"
             android:label="@string/title_activity_display_vote_stats"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName="com.leanovate.moodly.app.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.moodly.app.MainActivity" />
+                android:value="com.leanovate.moodly.app.MainActivity" />
         </activity>
         <activity
-            android:name=".Settings"
+            android:name="com.leanovate.moodly.app.Settings"
             android:label="Settings"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName="com.leanovate.moodly.app.MainActivity" >
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
-                    android:value="com.example.moodly.app.MainActivity" />
+                    android:value="com.leanovate.moodly.app.MainActivity" />
         </activity>
     </application>
 
