--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,12 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
+        maven { url 'http://nexus.testobject.org/nexus/content/repositories/testobject-public-repo' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.0.0'
+        classpath group: 'org.testobject', name: 'testobject-gradle-plugin', version: '0.0.8'
     }
 }
 apply plugin: 'com.android.application'
@@ -11,6 +14,7 @@ apply plugin: 'com.android.application'
 repositories {
     jcenter()
 }
+
 
 android {
     compileSdkVersion 21
